--- a/metacc/snakemake/Snakefile
+++ b/metacc/snakemake/Snakefile
@@ -19,8 +19,6 @@ else:
     print("Computer not recognised")
     exit()
 
-# validate(config, schema="schemas/config.schema.yaml")
-
 ###########
 ## Rules ##
 ###########
@@ -32,7 +30,11 @@ rule all:
         config["directories"]["results"]+"/met/stats/pdf/CG_coverage_per_sample.pdf",
         config["directories"]["results"]+"/acc/stats/pdf/GC_coverage_per_sample.pdf",
         config["directories"]["results"]+"/met/qc/sample_metadata_after_met_qc.txt.gz",
-        config["directories"]["results"]+"/acc/qc/sample_metadata_after_acc_qc.txt.gz"
+        config["directories"]["results"]+"/acc/qc/sample_metadata_after_acc_qc.txt.gz",
+        config["directories"]["results"]+"/met/stats/met_stats_per_chr.txt.gz",
+        config["directories"]["results"]+"/acc/stats/acc_stats_per_chr.txt.gz",
+        expand(config["directories"]["processed_data"]+"/met/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"]),
+        expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"])
         # expand("%s/rna/mapping/mapping_seurat_{sample}.txt.gz" % config["directories"]["results"], sample=config["samples"])
         # config["directories"]["results"]+"/rna/mapping/pdf/umap_mapped_allcells.pdf",
 
@@ -89,7 +91,7 @@ rule calculate_chr_stats_per_cell_met:
     resources:
         mem_mb = config["slurm"]["calculate_chr_stats_per_cell"]["memory"]
     shell:
-        "Rscript {input.script}  --indir {input.indir} --context CG --outfile {output} > {log}"
+        "Rscript {input.script}  --indir {input.indir} --context CG --outfile {output}  > {log}"
 
 rule calculate_chr_stats_per_cell_acc:
     input:
@@ -104,7 +106,7 @@ rule calculate_chr_stats_per_cell_acc:
     resources:
         mem_mb = config["slurm"]["calculate_chr_stats_per_cell"]["memory"]
     shell:
-        "Rscript {input.script}  --indir {input.indir} --context GC --outfile {output} > {log}"
+        "Rscript {input.script}  --indir {input.indir} --context GC --outfile {output}  > {log}"
 
 #####################################
 ## Plot global statistics per cell ##
@@ -193,3 +195,84 @@ rule qc_acc:
         "Rscript {input.script} --metadata {input.metadata} --context GC \
         --minimum_number_sites {params.minimum_number_sites} --min_rate {params.min_rate} --max_rate {params.max_rate} \
         --outdir {params.outdir} > {log}"
+
+###########################################
+## Quantify met/acc at the feature level ##
+###########################################
+
+rule quantify_met_feature_level:
+    input:
+        script = config["scripts"]["quantify_feature_level"],
+        indir = config["directories"]["processed_data"]+"/met/cpg_level",
+        featuresdir = config["directories"]["features"],
+        metadata = rules.qc_met.output
+    output:
+        config["directories"]["processed_data"]+"/met/feature_level/{genomic_context}.tsv.gz"
+    params:
+        outdir = config["directories"]["processed_data"]+"/met/feature_level"
+    log: 
+        "logs/quantify_met_feature_level_{genomic_context}.log"
+    threads: 
+        config["slurm"]["quantify_feature_level"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["quantify_feature_level"]["memory"]
+    shell:
+        "Rscript {input.script} --indir {input.indir} --featuresdir {input.featuresdir} --metadata {input.metadata} --context CG --annos {wildcards.genomic_context} --outdir {params.outdir} > {log}"
+
+rule quantify_acc_feature_level:
+    input:
+        script = config["scripts"]["quantify_feature_level"],
+        indir = config["directories"]["processed_data"]+"/acc/cpg_level",
+        featuresdir = config["directories"]["features"],
+        metadata = rules.qc_acc.output
+    output:
+        config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz"
+    params:
+        outdir = config["directories"]["processed_data"]+"/acc/feature_level"
+    log: 
+        "logs/quantify_acc_feature_level_{genomic_context}.log"
+    threads: 
+        config["slurm"]["quantify_feature_level"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["quantify_feature_level"]["memory"]
+    shell:
+        "Rscript {input.script} --indir {input.indir} --featuresdir {input.featuresdir} --metadata {input.metadata} --context GC --annos {wildcards.genomic_context} --outdir {params.outdir} > {log}"
+
+####################
+## Sex assignment ##
+####################
+
+##############################################
+## Boxplots of met/acc at the feature level ##
+##############################################
+
+####################
+## TSS enrichment ##
+####################
+
+################
+## Pseudobulk ##
+################
+
+rule pseudobulk_met:
+    input:
+        script = config["scripts"]["pseudobulk"],
+        indir = config["directories"]["processed_data"]+"/met/cpg_level",
+        featuresdir = config["directories"]["features"],
+        metadata = rules.qc_met.output
+    output:
+        config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
+    params:
+        outdir = config["directories"]["processed_data"]+"/met/feature_level/pseudobulk/{pseudobulk_group_by}",
+        # group_by = config["params"]["pseudobulk"]["group_by"],
+        ncores = config["slurm"]["pseudobulk"]["threads"]
+    log: 
+        "logs/pseudobulk_met_{pseudobulk_group_by}.log"
+    threads: 
+        config["slurm"]["pseudobulk"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["pseudobulk"]["memory"]
+    shell:
+        "Rscript {input.script} --indir {input.indir} --metadata {input.metadata} --context CG --group_by {wildcards.pseudobulk_group_by} \
+        --ncores {params.min_cores} --min_cells {params.min_cells} --outdir {params.outdir} --test > {log}"
+
