--- a/metacc/snakemake/config_ricard_babraham.yaml
+++ b/metacc/snakemake/config_ricard_babraham.yaml
@@ -24,6 +24,21 @@ plates:
     - E8.5_oct20_plate2
     - E8.5_oct20_plate8
 
+genomic_contexts:
+    - multiome_peaks
+    - CGI
+    - H3K27ac_distal_E7.5_Ect_intersect12
+    - H3K27ac_distal_E7.5_End_intersect12
+    - H3K27ac_distal_E7.5_Mes_intersect12
+    - LINE
+    - LTR
+    - genebody
+    - prom_2000_2000
+    - prom_2000_2000_cgi
+    - prom_2000_2000_noncgi
+    - prom_200_200
+    - prom_200_200_cgi
+    - prom_200_200_noncgi
 
 #################
 ## Directories ##
@@ -33,6 +48,7 @@ directories:
     base: /bi/group/reik/ricard/data/tet_chimera_nmtseq
     processed_data: /bi/group/reik/ricard/data/tet_chimera_nmtseq/processed
     results: /bi/group/reik/ricard/data/tet_chimera_nmtseq/results
+    features: /bi/group/reik/ricard/data/tet_chimera_nmtseq/features/genomic_contexts
 
 ###############
 ## Resources ##
@@ -52,6 +68,9 @@ scripts:
     plot_global_stats_per_cell: ../stats/plot_stats.R
     plot_chr_stats_per_cell: ../stats/plot_stats_per_chr.R
     qc: ../qc/qc.R
+    quantify_feature_level: ../quantify_feature_level/quantify_feature_level.R
+    pseudobulk: ../pseudobulk/pseudobulk_cpg_level.R
+
 
 ################
 ## Parameters ##
@@ -66,6 +85,9 @@ params:
         minimum_number_sites: 10000
         min_rate: 10
         max_rate: 40
+    pseudobulk:
+        group_by: "sample"
+
 
 ###########
 ## Slurm ##
@@ -75,8 +97,17 @@ slurm:  # memory in MB
     calculate_global_stats_per_cell: 
         memory: 5000
         threads: 1
+    calculate_chr_stats_per_cell: 
+        memory: 5000
+        threads: 1
     plot_global_stats_per_cell: 
         memory: 3000
+        threads: 1
+    quantify_feature_level: 
+        memory: 5000
+        threads: 1
+    pseudobulk: 
+        memory: 10000
         threads: 1
     qc: 
         memory: 5000
