--- a/metacc/snakemake/Snakefile
+++ b/metacc/snakemake/Snakefile
@@ -31,10 +31,13 @@ rule all:
         config["directories"]["results"]+"/acc/stats/pdf/GC_coverage_per_sample.pdf",
         config["directories"]["results"]+"/met/qc/sample_metadata_after_met_qc.txt.gz",
         config["directories"]["results"]+"/acc/qc/sample_metadata_after_acc_qc.txt.gz",
+        config["directories"]["results"]+"/metacc/qc/sample_metadata_after_metacc_qc.txt.gz",
         config["directories"]["results"]+"/met/stats/met_stats_per_chr.txt.gz",
         config["directories"]["results"]+"/acc/stats/acc_stats_per_chr.txt.gz",
         expand(config["directories"]["processed_data"]+"/met/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"]),
-        expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"])
+        expand(config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"])
+        # expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
+        # expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"])
         # expand("%s/rna/mapping/mapping_seurat_{sample}.txt.gz" % config["directories"]["results"], sample=config["samples"])
         # config["directories"]["results"]+"/rna/mapping/pdf/umap_mapped_allcells.pdf",
 
@@ -196,6 +199,21 @@ rule qc_acc:
         --minimum_number_sites {params.minimum_number_sites} --min_rate {params.min_rate} --max_rate {params.max_rate} \
         --outdir {params.outdir} > {log}"
 
+rule parse_metadata_after_qc:
+    input:
+        script=config["scripts"]["qc"],
+        metadata_met = rules.qc_met.output,
+        metadata_acc = rules.qc_acc.output
+    output:
+        config["directories"]["results"]+"/metacc/qc/sample_metadata_after_metacc_qc.txt.gz"
+    log: 
+        "logs/parse_metadata_after_qc.log"
+    threads: 1
+    resources: mem_mb = 200
+    shell:
+        "Rscript {input.script} --metadata_met {input.metadata_met} --metadata_acc {input.metadata_acc} --outfile {output} > {log}"
+
+
 ###########################################
 ## Quantify met/acc at the feature level ##
 ###########################################
@@ -222,7 +240,7 @@ rule quantify_met_feature_level:
 rule quantify_acc_feature_level:
     input:
         script = config["scripts"]["quantify_feature_level"],
-        indir = config["directories"]["processed_data"]+"/acc/cpg_level",
+        indir = config["directories"]["processed_data"]+"/acc/gpc_level",
         featuresdir = config["directories"]["features"],
         metadata = rules.qc_acc.output
     output:
@@ -246,9 +264,14 @@ rule quantify_acc_feature_level:
 ## Boxplots of met/acc at the feature level ##
 ##############################################
 
+
 ####################
 ## TSS enrichment ##
 ####################
+
+##################
+## TSS profiles ##
+##################
 
 ################
 ## Pseudobulk ##
@@ -263,8 +286,9 @@ rule pseudobulk_met:
     output:
         config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
     params:
-        outdir = config["directories"]["processed_data"]+"/met/feature_level/pseudobulk/{pseudobulk_group_by}",
+        outdir = config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}",
         # group_by = config["params"]["pseudobulk"]["group_by"],
+        min_cells = config["params"]["pseudobulk"]["min_cells"],
         ncores = config["slurm"]["pseudobulk"]["threads"]
     log: 
         "logs/pseudobulk_met_{pseudobulk_group_by}.log"
@@ -274,5 +298,29 @@ rule pseudobulk_met:
         mem_mb = config["slurm"]["pseudobulk"]["memory"]
     shell:
         "Rscript {input.script} --indir {input.indir} --metadata {input.metadata} --context CG --group_by {wildcards.pseudobulk_group_by} \
-        --ncores {params.min_cores} --min_cells {params.min_cells} --outdir {params.outdir} --test > {log}"
+        --ncores {params.ncores} --min_cells {params.min_cells} --outdir {params.outdir} > {log}"
+
+
+rule pseudobulk_acc:
+    input:
+        script = config["scripts"]["pseudobulk"],
+        indir = config["directories"]["processed_data"]+"/acc/cpg_level",
+        featuresdir = config["directories"]["features"],
+        metadata = rules.qc_acc.output
+    output:
+        config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
+    params:
+        outdir = config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}",
+        # group_by = config["params"]["pseudobulk"]["group_by"],
+        min_cells = config["params"]["pseudobulk"]["min_cells"],
+        ncores = config["slurm"]["pseudobulk"]["threads"]
+    log: 
+        "logs/pseudobulk_acc_{pseudobulk_group_by}.log"
+    threads: 
+        config["slurm"]["pseudobulk"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["pseudobulk"]["memory"]
+    shell:
+        "Rscript {input.script} --indir {input.indir} --metadata {input.metadata} --context GC --group_by {wildcards.pseudobulk_group_by} \
+        --ncores {params.ncores} --min_cells {params.min_cells} --outdir {params.outdir} > {log}"
 
