--- a/metacc/snakemake/config_ricard_babraham.yaml
+++ b/metacc/snakemake/config_ricard_babraham.yaml
@@ -86,7 +86,8 @@ params:
         min_rate: 10
         max_rate: 40
     pseudobulk:
-        group_by: "sample"
+        group_by: ["sample"]
+        min_cells: 15
 
 
 ###########
@@ -104,7 +105,7 @@ slurm:  # memory in MB
         memory: 3000
         threads: 1
     quantify_feature_level: 
-        memory: 5000
+        memory: 8000
         threads: 1
     pseudobulk: 
         memory: 10000
