--- a/metacc/snakemake/Snakefile
+++ b/metacc/snakemake/Snakefile
@@ -35,7 +35,9 @@ rule all:
         config["directories"]["results"]+"/met/stats/met_stats_per_chr.txt.gz",
         config["directories"]["results"]+"/acc/stats/acc_stats_per_chr.txt.gz",
         expand(config["directories"]["processed_data"]+"/met/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"]),
-        expand(config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"])
+        expand(config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"]),
+        expand(config["directories"]["results"]+"/metacc/boxplots_feature_level/boxplots_metacc_{genomic_context}.pdf", genomic_context=config["genomic_contexts"]),
+        expand(config["directories"]["results"]+"/metacc/boxplots_feature_level/boxplots_metacc_relative_{genomic_context}.pdf", genomic_context=config["genomic_contexts"])
         # expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
         # expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"])
         # expand("%s/rna/mapping/mapping_seurat_{sample}.txt.gz" % config["directories"]["results"], sample=config["samples"])
@@ -264,14 +266,33 @@ rule quantify_acc_feature_level:
 ## Boxplots of met/acc at the feature level ##
 ##############################################
 
-
-####################
-## TSS enrichment ##
-####################
+rule boxplots_metacc_feature_level:
+    input:
+        script = config["scripts"]["boxplots_metacc_feature_level"],
+        met_file = config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz",
+        acc_file = config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz",
+        metadata = rules.parse_metadata_after_qc.output
+    output:
+        config["directories"]["results"]+"/metacc/boxplots_feature_level/boxplots_metacc_{genomic_context}.pdf",
+        config["directories"]["results"]+"/metacc/boxplots_feature_level/boxplots_metacc_relative_{genomic_context}.pdf"
+    params:
+        outdir = config["directories"]["results"]+"/metacc/boxplots_feature_level"
+    log: 
+        "logs/quantify_acc_feature_level_{genomic_context}.log"
+    threads: 
+        config["slurm"]["quantify_feature_level"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["quantify_feature_level"]["memory"]
+    shell:
+        "Rscript {input.script} --met_file {input.met_file} --acc_file {input.acc_file} --metadata {input.metadata} --anno {wildcards.genomic_context} --outdir {params.outdir} > {log}"
 
 ##################
 ## TSS profiles ##
 ##################
+
+####################
+## TSS enrichment ##
+####################
 
 ################
 ## Pseudobulk ##
