--- a/metacc/snakemake/Snakefile
+++ b/metacc/snakemake/Snakefile
@@ -37,11 +37,14 @@ rule all:
         expand(config["directories"]["processed_data"]+"/met/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"]),
         expand(config["directories"]["processed_data"]+"/acc/feature_level/{genomic_context}.tsv.gz", genomic_context=config["genomic_contexts"]),
         expand(config["directories"]["results"]+"/metacc/boxplots_feature_level/boxplots_metacc_{genomic_context}.pdf", genomic_context=config["genomic_contexts"]),
-        expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
-        expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
+        # expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
+        # expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
+        expand(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
+        # expand(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"]),
         config["directories"]["results"]+"/metacc/tss_profiles/precomputed_metacc_prom_200_200.txt.gz",
         # config["directories"]["results"]+"/metacc/tss_profiles/pdf/CG_ratio_vs_GC_ratio_coloured_by_nCG.pdf",
         expand(config["directories"]["processed_data"]+"/met/bigwig/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"])
+        # expand(config["directories"]["processed_data"]+"/acc/bigwig/{pseudobulk_group_by}/completed.txt", pseudobulk_group_by=config["params"]["pseudobulk"]["group_by"])
     
 
 #################################
@@ -259,11 +262,6 @@ rule quantify_acc_feature_level:
     shell:
         "Rscript {input.script} --indir {input.indir} --featuresdir {input.featuresdir} --metadata {input.metadata} --context GC --annos {wildcards.genomic_context} --outdir {params.outdir} > {log}"
 
-####################
-## Sex assignment ##
-####################
-
-
 ##############################################
 ## Boxplots of met/acc at the feature level ##
 ##############################################
@@ -342,7 +340,8 @@ rule pseudobulk_met:
         featuresdir = config["directories"]["features"],
         metadata = rules.qc_met.output
     output:
-        config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
+        directory(config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}")
+        # config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
     params:
         outdir = config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}",
         # group_by = config["params"]["pseudobulk"]["group_by"],
@@ -366,7 +365,8 @@ rule pseudobulk_acc:
         featuresdir = config["directories"]["features"],
         metadata = rules.qc_acc.output
     output:
-        config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
+        directory(config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}")
+        # config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}/completed.txt"
     params:
         outdir = config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}",
         # group_by = config["params"]["pseudobulk"]["group_by"],
@@ -390,27 +390,99 @@ rule pseudobulk_acc:
 
 rule generate_bigwig_files_met:
     input:
-        rules.pseudobulk_met.output,
+        # rules.pseudobulk_met.output,
         script = config["scripts"]["bigwig"],
-        indir = config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}",
+        indir = rules.pseudobulk_met.output
+        # indir = config["directories"]["processed_data"]+"/met/cpg_level/pseudobulk/{pseudobulk_group_by}",
     output:
         config["directories"]["processed_data"]+"/met/bigwig/{pseudobulk_group_by}/completed.txt"
     params:
         outdir = config["directories"]["processed_data"]+"/met/bigwig/{pseudobulk_group_by}",
-        bedGraphToBigWig=config["directories"]["bedGraphToBigWig"],
+        bedGraphToBigWig = config["directories"]["bedGraphToBigWig"],
         genome_seq = config["directories"]["genome_seq"],
         step_size = config["params"]["bigwig_met"]["step_size"],
         min_rate_bigwig = config["params"]["bigwig_met"]["min_rate_bigwig"]
     log: 
         "logs/generate_bigwig_files_met_{pseudobulk_group_by}.log"
     threads: 
-        config["slurm"]["bigwig"]["threads"]
+        config["slurm"]["bigwig_met"]["threads"]
     resources:
-        mem_mb = config["slurm"]["bigwig"]["memory"]
+        mem_mb = config["slurm"]["bigwig_met"]["memory"]
+    shell:
+        "Rscript {input.script} --indir {input.indir} --bedGraphToBigWig {params.bedGraphToBigWig} \
+        --genome_seq {params.genome_seq} --step_size {params.step_size} --min_rate_bigwig {params.min_rate_bigwig} \
+        --outdir {params.outdir} --smooth_rates > {log}"
+
+rule generate_bigwig_files_acc:
+    input:
+        rules.pseudobulk_acc.output,
+        script = config["scripts"]["bigwig"],
+        # indir = config["directories"]["processed_data"]+"/acc/gpc_level/pseudobulk/{pseudobulk_group_by}",
+        indir = rules.pseudobulk_acc.output
+    output:
+        config["directories"]["processed_data"]+"/acc/bigwig/{pseudobulk_group_by}/completed.txt"
+    params:
+        outdir = config["directories"]["processed_data"]+"/acc/bigwig/{pseudobulk_group_by}",
+        bedGraphToBigWig = config["directories"]["bedGraphToBigWig"],
+        genome_seq = config["directories"]["genome_seq"],
+        step_size = config["params"]["bigwig_acc"]["step_size"],
+        min_rate_bigwig = config["params"]["bigwig_acc"]["min_rate_bigwig"]
+    log: 
+        "logs/generate_bigwig_files_acc_{pseudobulk_group_by}.log"
+    threads: 
+        config["slurm"]["bigwig_acc"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["bigwig_acc"]["memory"]
     shell:
         "Rscript {input.script} --indir {input.indir} --bedGraphToBigWig {params.bedGraphToBigWig} \
         --genome_seq {params.genome_seq} --step_size {params.step_size} --min_rate_bigwig {params.min_rate_bigwig} \
         --outdir {params.outdir} --smooth_rates --test > {log}"
 
 
+####################
+## Sex assignment ##
+####################
+
+##############################
+## Dimensionality reduction ##
+##############################
+
+##############
+## Coupling ##
+##############
+
+rule generate_bigwig_files_met:
+    input:
+        # rules.pseudobulk_met.output,
+        script = config["scripts"]["metrna_coupling"],
+        metadata = rules.parse_metadata_after_qc.output,
+        sce = config["directories"]["rna_SingleCellExperiment"],
+        tss_file = config["directories"]["tss_file"]
+    output:
+        config["directories"]["results"]+"metrna/coupling/precomputed_metrna_coupling.txt.gz"
+    params:
+        up = config["params"]["metrna_coupling"]["up"],
+        down = config["params"]["metrna_coupling"]["down"],
+        window = config["params"]["metrna_coupling"]["window"],
+        tile = config["params"]["metrna_coupling"]["tile"],
+        min_rate_bigwig = config["params"]["metrna_coupling"]["min_rate_bigwig"]
+    log: 
+        "logs/generate_bigwig_files_met_{pseudobulk_group_by}.log"
+    threads: 
+        config["slurm"]["metrna_coupling"]["threads"]
+    resources:
+        mem_mb = config["slurm"]["metrna_coupling"]["memory"]
+    shell:
+        "Rscript {input.script} --sce {input.sce} --metadata {input.metadata} --tss {input.tss_file} \
+        --up {params.up} --down {params.down} --window {params.window} --tile {params.tile} \
+        --outfile {output} --test > {log}"
+
+
+####################
+## Motif analysis ##
+####################
+
+##############################
+## Plot individual features ##
+##############################
 
